2018-06-08  Boruch Baum  <boruch_baum@gmx.com>

	Refactor w3m-process-queue memory and redability ([emacs-w3m:13013]).

	* w3m.el (w3m--dump-extra--handler-function)
	(w3m--retrieve--handler-function, w3m--retrieve-1--handler-function)
	(defun w3m--retrieve-and-render--handler-function)
	(w3m--goto-url--handler-function, w3m--goto-url--valid-url):
	New functions to reduce memory footprint of `w3m-process-queue',
	aid readability debugging.

	* w3m.el (w3m-w3m-dump-extra, w3m-w3m-retrieve, w3m-w3m-retrieve-1)
	(w3m-retrieve-and-render, w3m-goto-url):
	Use the new functions listed above.

2018-06-07  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-stackexchange): Rewrite ([emacs-w3m:13010]).

2018-06-01  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-stackexchange, w3m-filter-youtube):
	New filters ([emacs-w3m:12999]).
	(w3m-filter-configuration): Add those filters.

2018-05-30  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-generic-page-header):
	New filter ([emacs-w3m:12996]).
	(w3m-filter-configuration): Add it but not activated by default.

2018-05-23  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-delete-buffer): Perform some operations from a temporary
	buffer in order not to lose information such as `w3m-current-url'
	([emacs-w3m:12989]).

2018-05-23  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-select-buffer): Pass correct current buffer value to
	`w3m-select-buffer-generate-contents' ([emacs-w3m:12988]).
	(w3m-select-buffer-generate-contents): Variable rename.

2018-05-19  Kevin Ryde  <user42_kevin@yahoo.com.au>

	* w3m-favicon.el (w3m-favicon-setup): Enable favicons be taken from
	file://, too ([emacs-w3m:12983]).

2018-05-18  Boruch Baum  <boruch_baum@gmx.com>

	Make progress messages more uniform and more useful
	([emacs-w3m:12980] [emacs-w3m:12986]).

	* w3m.el (w3m-display-progress-message): Combine code from
	`w3m-retrieve-and-render', separate url from "...", and add